crates/vihaco-parser/tests/compile_errors/prefix_order.stderr
error: token `foo` is a prefix of `foobar` declared after it — reorder so longer tokens come first
 --> tests/compile_errors/prefix_order.rs:3:6
  |
3 | enum Bad {
  |      ^^^
